--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -181,6 +181,9 @@
     <string name="flow_setting">Setări</string>
     <string name="folder_name_empty">Numele dosarului nu poate fi gol</string>
     <string name="folder_name_illegal">Nume dosar greşit</string>
+    <string name="follow_fail">"Nu s-a putut urmări, încercați din nou mai târziu"</string>
+    <string name="follow_tip_1">Urmăriți-mă pentru a vedea mai multe videoclipuri</string>
+    <string name="follow_tip_2">Urmăriți-mă pentru a vedea mai multe videoclipuri</string>
     <string name="found_router">Router conectat</string>
     <string name="found_usb">Stocare USB conectată</string>
     <string name="ftp_account_req_notice">4-16 caractere, litere şi cifre, diferenţiere între minuscule şi majuscule</string>
@@ -256,7 +259,6 @@
     <string name="menu_item_sort_by_added_time">Adăugat</string>
     <string name="menu_item_sort_date">Data modificării</string>
     <string name="menu_item_sort_name">Nume</string>
-    <string name="menu_item_sort_size">Dimensiune</string>
     <string name="menu_item_sort_type">Tip</string>
     <string name="menu_item_usb">USB</string>
     <string name="message_comment_prefix">"Comentariu: "</string>
@@ -483,6 +485,9 @@
     <string name="setting">Setări</string>
     <string name="setting_account_bind">Adăugați un cont</string>
     <string name="setting_message_notify">Notificări</string>
+    <string name="share_success">Partajat cu succes</string>
+    <string name="share_tip_1">Mulțumesc pentru partajare; urmăriți-mă pentru a vedea mai multe videoclipuri</string>
+    <string name="share_tip_2">Mulțumesc pentru partajare; urmăriți-mă pentru a vedea mai multe videoclipuri</string>
     <string name="share_title_1">Am găsit o colecție faină de stickere!</string>
     <string name="share_to">Partajați la…</string>
     <string name="share_youliao1">Actualizați pentru a urmări mai multe episoade.</string>
@@ -498,6 +503,8 @@
     <string name="shared_sticker_use_tip_title">Cum se folosesc stickerele</string>
     <string name="shared_str">Partajate de %s</string>
     <string name="smb_loading">Doar o secundă…</string>
+    <string name="sort_size_asc">De la mic la mare</string>
+    <string name="sort_size_desc">De la mare la mic</string>
     <string name="start_server">Porniţi serverul</string>
     <string name="stay_awake_summary">Ecranul va fi activ permanent atunci când utilizaţi FTP</string>
     <string name="stay_awake_title">Mențineți ecranul activ</string>
@@ -508,6 +515,8 @@
     <string name="storage_sd_card">Card SD</string>
     <string name="storage_usb">Stocare USB</string>
     <string name="storage_warning">Imposibil de utilizat stocarea externă</string>
+  <string name="swap_tip_1">Glisați spre stânga sau spre dreapta</string>
+  <string name="swap_tip_2">pentru a vedea alte videoclipuri</string>
     <string name="sys_size_enable">" disponibil"</string>
     <string name="tab_category">Categorii</string>
     <string name="tab_common_app">Aplicații și dosare</string>
@@ -607,13 +616,19 @@
     <string name="user_setting_follow_new_msg_tip">Primiți notificări pentru videoclipurile noi</string>
     <string name="user_setting_followed_msg">Notificări despre urmăritori</string>
     <string name="user_setting_followed_msg_tip">"Veți primi notificări atunci când persoanele încep să vă urmărească postările"</string>
+    <string name="user_setting_hot_comment">Notificări despre comentariile recomandate</string>
+    <string name="user_setting_hot_comment_tip">Primiți notificări atunci când comentariile dumneavoastră sunt recomandate</string>
     <string name="user_setting_logout">Deconectare</string>
     <string name="user_setting_new_comment">Notificări despre comentariile noi</string>
     <string name="user_setting_new_comment_tip">"Veți primi notificări despre postările la comentariile și videoclipurile dvs."</string>
     <string name="user_setting_new_liked">Notificări pentru aprecieri</string>
     <string name="user_setting_new_liked_tip">"Veți primi notificări atunci când alte persoane vă apreciază videoclipurile și comentariile"</string>
+    <string name="user_setting_play_num">Notificări despre vizualizări</string>
+    <string name="user_setting_play_num_tip">Primiți notificări despre numărul de vizualizări al videoclipurilor dumneavoastră</string>
     <string name="user_setting_topic_new_msg">Notificări despre subiecte</string>
     <string name="user_setting_topic_new_msg_tip">"Veți primi notificări despre videoclipurile noi din subiectele pe care le urmăriți"</string>
+    <string name="user_setting_video_has_hot_comment">Notificări despre comentariile populare</string>
+    <string name="user_setting_video_has_hot_comment_tip">Primiți notificări atunci când videoclipurile dumneavoastră primesc comentarii populare</string>
     <string name="user_sex">Sex</string>
     <string name="user_sign">Semnătură</string>
     <string name="user_topic_text">Subiectele mele</string>
@@ -653,12 +668,12 @@
     <string name="video_upload_hint">Încărcați videoclipuri promovate pentru a obține mai multe puncte.</string>
     <string name="video_upload_item_more">Mai multe (%1$s)</string>
     <string name="video_upload_item_title">%1$s (%2$s)</string>
-    <string name="video_upload_kuaishou_hint">Încărcați videoclipuri KuaiShou pentru a cîștiga mai mulți fani.</string>
+    <string name="video_upload_kuaishou_hint">Încărcați videoclipuri KuaiShou pentru a câștiga mai mulți fani.</string>
     <string name="video_upload_retry_confirm">Încercați din nou</string>
     <string name="video_upload_retry_message">"Nu s-a putut încărca. Încercați din nou?"</string>
     <string name="video_upload_retry_title">Încearcă din nou</string>
     <string name="video_upload_title">Selectați videoclipul</string>
-    <string name="video_upload_wechat_hint">Încărcați videoclipuri WeChat pentru a cîștiga mai mulți fani.</string>
+    <string name="video_upload_wechat_hint">Încărcați videoclipuri WeChat pentru a câștiga mai mulți fani.</string>
     <string name="video_uploaded">Încărcat</string>
     <string name="view_more_sticker">Vedeți mai multe stickere</string>
     <string name="wechat_btn_bind">WeChat</string>
@@ -667,6 +682,9 @@
     <string name="wechat_video">Video la %s</string>
     <string name="weixin_not_installed">"WeChat nu este instalată"</string>
     <string name="weixin_sticker_tag_str">Stickere</string>
+    <string name="welcome_to_my_page">Bine ați venit pe pagina mea</string>
+    <string name="welcome_to_my_page_1">Urmăriți-mă!</string>
+    <string name="welcome_to_my_page_2">Urmăriți-mă!</string>
     <string name="wifi_state">Reţea Wi-Fi</string>
     <string name="wx_title1">"Uite un videoclip mișto!"</string>
     <string name="wx_title2">Am distribuit un videoclip, aruncă o privire!</string>
