--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -105,6 +105,24 @@
     <string name="dialog_activate_livetalk">Verificați numărul</string>
     <string name="dialog_call_ordinary_telephone">Apel obișnuit</string>
     <string name="dialog_purchase">Suplimentați</string>
+    <string name="dialpad_abc">ABC</string>
+    <string name="dialpad_def">DEF</string>
+    <string name="dialpad_eight">8</string>
+    <string name="dialpad_five">5</string>
+    <string name="dialpad_four">4</string>
+    <string name="dialpad_ghi">GHI</string>
+    <string name="dialpad_jkl">JKL</string>
+    <string name="dialpad_mno">MNO</string>
+    <string name="dialpad_nine">9</string>
+    <string name="dialpad_one">1</string>
+    <string name="dialpad_pqrs">PQRS</string>
+    <string name="dialpad_seven">7</string>
+    <string name="dialpad_six">6</string>
+    <string name="dialpad_three">3</string>
+    <string name="dialpad_tuv">TUV</string>
+    <string name="dialpad_two">2</string>
+    <string name="dialpad_wxyz">WXYZ</string>
+    <string name="dialpad_zero">0</string>
     <string name="do_not_ask">Nu arăta din nou</string>
     <string name="do_not_support_video_calls_by_remote">"Apelurile video nu sunt suportate pe celălalt telefon"</string>
     <string name="emergency_call_dialog_number_for_display">Număr de urgenţă</string>
@@ -194,14 +212,14 @@
     <string name="onscreen_call_record">Înregistrare</string>
     <string name="onscreen_change_to_video">Apel video</string>
     <string name="onscreen_change_to_voice">Apel vocal</string>
-    <string name="onscreen_close_preview_camera">Închideți camera</string>
+    <string name="onscreen_close_preview_camera">Închideți</string>
     <string name="onscreen_hold_text">Menţinere</string>
     <string name="onscreen_merge_calls_text">Îmbinare apeluri</string>
     <string name="onscreen_mute_text">Mut</string>
     <string name="onscreen_note_calls_text">Notă</string>
     <string name="onscreen_rcs_text">Mesaje</string>
     <string name="onscreen_swap_calls_text">Schimbare</string>
-    <string name="onscreen_switch_camera">Comutați camera</string>
+    <string name="onscreen_switch_camera">Comutați</string>
     <string name="pause_prompt_no">Nu</string>
     <string name="pause_prompt_yes">Da</string>
     <string name="payphone">Telefon public</string>
@@ -215,7 +233,7 @@
     <string name="select_voice_call_sim">Selectaţi cartela SIM</string>
     <string name="separate_from_conference">Separaţi apelul</string>
     <string name="sip_call_not_support_record">"Nu se pot înregistra apelurile SIP"</string>
-    <string name="suspect_info">Verificaţi mereu identitatea persoanei cu care vorbiţi prin telefon înainte de a răspunde la orice mesaje care implică datele personale.</string>
+    <string name="suspect_info">Fiți atenți cui furnizați datele personale.</string>
     <string name="time_left_livetalk">(%ds)</string>
     <string name="unknown">Necunoscut</string>
     <string name="upgrade_vt_prompt">Doriți să treceţi la apel video?</string>
